syntax = "proto3";

package secret_public;

option go_package = "github.com/evgenivanovi/gophkeeper/api/pb/secret/public";

import "secret/model.proto";

// __________________________________________________

message CreateDecodedSecretRequest {
  message Payload {
    secret.DecodedSecretData data = 1;
  }
  Payload payload = 1;
}

message CreateDecodedSecretResponse {
  message Payload {
    secret.EncodedSecret data = 1;
  }
  Payload payload = 1;
}

message CreateEncodedSecretRequest {
  message Payload {
    secret.EncodedSecretData data = 1;
  }
  Payload payload = 1;
}

message CreateEncodedSecretResponse {
  message Payload {
    secret.EncodedSecret data = 1;
  }
  Payload payload = 1;
}

service SecretManagementAPI {

  rpc CreateDecoded(CreateDecodedSecretRequest)
      returns (CreateDecodedSecretResponse);

  rpc CreateEncoded(CreateEncodedSecretRequest)
      returns (CreateEncodedSecretResponse);

}

// __________________________________________________

message GetByNameSecretRequest {
  message Payload {
    string name = 1;
  }
  Payload payload = 1;
}

message GetSecretResponse {
  message Payload {
    secret.EncodedSecret data = 1;
  }
  Payload payload = 1;
}

service SecretSeekingAPI {

  rpc GetByName(GetByNameSecretRequest)
      returns (GetSecretResponse);

}

// __________________________________________________
